fix align

--- a/static/pages_css/chapter1.css
+++ b/static/pages_css/chapter1.css
@@ -41,6 +41,7 @@ h1 {
     width: 100%;
     box-sizing: border-box;
     margin-top: 0.75rem;
+    align-self: center;
 }
 
 .footer-image {
